.ci/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: personal-website
    namespace: personal-website
spec:
    replicas: 2
    selector:
        matchLabels:
            app: personal-website
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: personal-website
        spec:
            containers:
                - image: illuzionz/website:latest
                  name: personal-website
                  ports:
                      - containerPort: 8080
                        protocol: TCP
            restartPolicy: Always
