.ci/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: website-ingress-svc
    namespace: personal-website
    #  annotations:
    #    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    labels:
        name: website-ingress-svc
spec:
    ingressClassName: nginx
    #  tls:
    #    - hosts:
    #        - jaminstratford.com
    #        - www.jaminstratford.com
    #      secretName: website-ingress-tls
    rules:
        - host: jaminstratford.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: personal-website-ip
                            port:
                                number: 8080
        - host: www.jaminstratford.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: personal-website-ip
                            port:
                                number: 8080
